syntax = "proto3";

package grpc.boilerplate;

option go_package = ".;pb";

import "google/api/annotations.proto";

message Name {
	string first_name = 1;
	string last_name = 2;
}

message GreetRequest {
	Name name = 1;
}

message GreetResponse {
	string result = 1;
}

service GreetService {
	rpc Greet(GreetRequest) returns (GreetResponse) {
		option (google.api.http) = {
			get : "/v1/greet"
		};
	};
}
